--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,8 @@ android {
     dataBinding {
         enabled = true
     }
+
+    testOptions.unitTests.includeAndroidResources = true
 }
 
 dependencies {
@@ -54,4 +56,6 @@ dependencies {
 
     testImplementation "org.mockito:mockito-core:4.5.1"
     testImplementation "androidx.arch.core:core-testing:2.1.0"
+
+    testImplementation "org.robolectric:robolectric:4.7.3"
 }
