--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,8 @@ android {
 dependencies {
     androidTestImplementation 'androidx.test:rules:1.4.1-alpha06'
     def archLifecycleVersion = '2.2.0'
+    def coroutines_version = '1.6.1'
+
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
@@ -58,4 +60,8 @@ dependencies {
     testImplementation "androidx.arch.core:core-testing:2.1.0"
 
     testImplementation "org.robolectric:robolectric:4.7.3"
+
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$coroutines_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
 }
